<resources>
    <string name="app_name">TruMedicine</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="banner_ad_unit_id">ca-app-pub-9685024074835205/1466650575</string>
    <string name="add">Add</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_title">Title</string>
    <string name="search_title">Search</string>
    <string name="invite">Invite Members</string>
    <string name="search_hint">Search</string>
    <string name="title_activity_terms_license">TermsLicenseActivity</string>
    <string name="sort_AZ">Sort by A-Z</string>
    <string name="sort_ZA">Sort by Z-A</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->

    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="license">License</string>
    <string name="upgrade">Upgrade</string>

    <string name="text_to_speech_failed">Sorry! Text To Speech failed</string>
    <string name="trues">true</string>
    <string name="oops">Oops</string>

    <string name="deletion_failed">Failed to delete!!</string>
    <string name="connect_net_to_delete">Please connect to internet to delete!</string>
    <string name="upload_pic">Please Capture/Upload Image</string>

    <string name="something_went_wrong">Something went wrong!</string>

    <string name="no_internet_connection">No Internet Connection</string>
    <string name="storage_exceeded">50 Images are limited for free version. Please upgarde to Pro version for upload more images.</string>


    <string name="app_license_name">PRIVACY POLICY</string>
    <string name="app_license_url">http://www.TruMedicines.com/privacy</string>
    <string name="app_copy_right">INTELLECTUAL PROPERTY RIGHTS \n≡ TruMedicines(tm) software and website is protected by US Patents #8,888,005; #9,152,913; Canadian Patent App #2858923; other Pats pending.Protected by US Trademark and Tradedress registration of TruMedicines LLC. International Copyright © 2013-2016 ≡TruMedicines In accordance with WIPO and US Copyright Law Title 17 U.S.C. Section 107, the images within this software are distributed without profit, as transformative images to promote educational and scientific purposes as fair use. Other brands listed are trademarks of their respective owners and are not affiliated with nor endorse TruMedicines LLC.
See (http://www.Trumedicines.com/legal</string>
    <string name="audio_play_again">Play</string>
    <string name="delete">Delete</string>
    <string name="description">Description</string>
    <string name="about_free_app">FREE APP</string>
    <string name="about_paid_app">PAID APP</string>
    <string name="free_app_desc">The "Free" Local android app will be basic photo catalog of images - "searchable" with a dropdown list box. The images will be stored locally on the phone within a SQLite

database with a limit of 50 images. The user will scroll through a listview of names to find the image of the unknown image (person).

The saved image will appear upon selection of their name from dropdown listbox.</string>
    <string name="paid_app_details">Then the user options for the “Paid” Web version - we configure and install a Mobile Photo recognition app.

The Paid Web version will be an online version using  object-pattern recognition.  The online image database will have a limit of 500 images, a text search will be used as a secondary method

to search through the catalog. 10 Users will have access to a shared image databases.</string>
    <string name="sort_date">Sort by Date</string>
    <string name="title_activity_image_detail">ImageDetailActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="enter_name">First name</string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="upgrade_pro">Upgrade</string>


    <string name="foto_limit">500 photo limit with shareable database</string>
    <string name="pattern_recognition">Pattern recognition</string>
    <string name="online_pro_version">Pro Version Features</string>
    <string name="enable_text_to_speech">Enable TextToSpeech</string>
    <string name="text_to_speech_settings">TexToSpeech Settings</string>
    <string name="invalid_payment">An invalid Payment or PayPalConfiguration was submitted. Please see the docs.</string>
    <string name="try_app">Try app</string>
    <string name="not_a_member">Not a member?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">reset password</string>
    <string name="last_name">Last name</string>
    <string name="send_invitation">send invitation</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="first_name">First Name</string>
    <string name="change_password">Change Password</string>
    <string name="update_details">Update Details</string>
    <string name="next">Next</string>
    <string name="repeat_password">Confirm password</string>
    <string name="image_search">Image Search</string>
    <string name="sync">Sync</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="info">INFO</string>
    <string name="no_match_found">No match found</string>
    <string name="enable_crop_on_image_search">Enable Crop on Image Search</string>
    <string name="please_capture_nor_upload">Please Capture \nor Upload \n\n↓</string>
    <string name="name">Name</string>
    <string name="price">Price: $3.99</string>
    <string name="email">Email</string>
    <string name="image_Search">Image Search</string>
    <string name="remember_me">Remember me</string>
    <string name="register_here">Register here</string>
    <string name="account_expiry_date">Account Expiry Date</string>
    <string name="qr_code_scan">QR Code Scan</string>
    <string name="download_free_data">Download Free Data</string>


</resources>
