<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_qrcode"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/image_search" />
        <item
            android:id="@+id/nav_qrcode_search"
            android:icon="@drawable/ic_action_qr_code"
            android:title="QR Code Search" />
        <item
            android:id="@+id/nav_sync"
            android:icon="@drawable/ic_sync_black_24dp"
            android:title="@string/sync" />

        <item
            android:id="@+id/nav_invite"
            android:icon="@drawable/ic_group_add_white_24dp"
            android:title="@string/invite" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/profile" />


    </group>
    <item android:title="@string/info">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/about" />

            <item
                android:id="@+id/nav_license"
                android:icon="@drawable/ic_license"
                android:title="@string/license" />
            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/logout" />

        </menu>
    </item>


</menu>
