<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.ForgotPasswordActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/adView"
            android:padding="@dimen/common_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <truemedicine.logiticks.com.trumedicine.views.CGTextViewLight
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/layout_bottom_space"
                    android:text="@string/about_free_app"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <truemedicine.logiticks.com.trumedicine.views.CGTextViewLight
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_bottom_space"
                    android:ems="10"
                    android:text="@string/free_app_desc" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <truemedicine.logiticks.com.trumedicine.views.CGTextViewLight
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/layout_bottom_space"
                    android:layout_marginTop="10dp"
                    android:text="@string/about_paid_app"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <truemedicine.logiticks.com.trumedicine.views.CGTextViewLight
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_bottom_space"
                    android:ems="10"
                    android:text="@string/paid_app_details" />

                <Button
                    android:id="@+id/upgradeButtonTwo"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/upgrade_button"
                    android:drawableLeft="@android:drawable/stat_sys_upload"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:text="@string/upgrade_pro"
                    android:textColor="@color/button_text_color" />


                <TextView
                    android:id="@+id/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>
        </ScrollView>

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>