<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.ForgotPasswordActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <Button
            android:id="@+id/upgradeButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/upgrade_button"
            android:drawableLeft="@android:drawable/stat_sys_upload"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/upgrade_pro"
            android:textColor="@color/button_text_color" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/online_pro_version"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#2C3E4F"
                android:inputType="none"
                android:padding="26dp"
                android:text="@string/foto_limit"
                android:textColor="@color/button_text_color" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#354B60"
                android:inputType="none"
                android:padding="26dp"
                android:text="@string/pattern_recognition"
                android:textColor="@color/button_text_color" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#2C3E4F"
                android:inputType="none"
                android:padding="26dp"
                android:text="Price: $10"
                android:textColor="@color/button_text_color" />

        </LinearLayout>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
